tests/spec/format/snapshots/match_pattern_wildcard.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match x { _ => \"anything\" } }"
---
fn test() {
  match x {
    _ => "anything",
  }
}
