tests/spec/format/snapshots/match_with_pattern_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    match x {
      Pair(
        a,
        // comment before b
        b,
      ) => a + b,
      _ => 0,
    }
  }
---
fn test() {
  match x {
    Pair(
      a,
      // comment before b
      b,
    ) => a + b,
    _ => 0,
  }
}
