tests/spec/format/snapshots/method_call.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { obj.method() }"
---
fn test() {
  obj.method()
}
