tests/spec/format/snapshots/method_call_with_type_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { obj.method<int>(arg) }"
---
fn test() {
  obj.method<int>(arg)
}
