tests/spec/format/snapshots/method_chain_comment_inside_parenthesized_receiver.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() { (first_value + // receiver detail
  second_value).combine() }
---
fn test() {
  (first_value +
  // receiver detail
  second_value).combine()
}
