tests/spec/format/snapshots/method_chain_comment_inside_receiver_slice.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() { ["Lilian", // comment
  "Lisette", // comment
  "Lisa"].length() }
---
fn test() {
  [
    "Lilian", // comment
    "Lisette", // comment
    "Lisa",
  ].length()
}
