tests/spec/format/snapshots/method_chain_short_stays_inline.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { foo.bar().baz() }"
---
fn test() {
  foo.bar().baz()
}
