tests/spec/format/snapshots/method_chain_two_calls.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let result = Some(42).map(|x: int| -> int { x * 2 }).unwrap_or(0) }"
---
fn test() {
  let result = Some(42)
    .map(|x: int| -> int {
      x * 2
    })
    .unwrap_or(0)
}
