tests/spec/format/snapshots/mixed_trailing_and_leading_fn_param_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test(
    a: int, // trailing on a
    // leading for b
    b: int,
  ) -> int {
    a + b
  }
---
fn test(
  a: int, // trailing on a
  // leading for b
  b: int,
) -> int {
  a + b
}
